--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-    <FrameLayout
-        android:id="@+id/fragment_container"
+    <Button
+        android:id="@+id/etaTime"
+        android:background="@drawable/circle_shape"
+        android:text="@string/eta_button_text"
+        android:textAllCaps="false"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:layout_width="300dp"
+        android:layout_height="300dp"/>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/separator"
+        app:cardBackgroundColor="@color/black"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="32dp"
+        android:layout_below="@id/etaTime"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="5dp"/>
 
-</FrameLayout>
+    <LinearLayout
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/separator"
+        android:layout_alignParentStart="true">
+
+        <Button
+            android:id="@+id/purchaseTicketButton"
+            android:background="@drawable/circle_shopping_cart"
+            android:layout_width="88dp"
+            android:layout_height="80dp"
+            style="@style/MainScreenBottomOptions"/>
+
+        <Button
+            android:id="@+id/viewTicketsButton"
+            android:background="@drawable/circle_tags"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_width="88dp"
+            android:layout_height="80dp"
+            style="@style/MainScreenBottomOptions"/>
+
+        <Button
+            android:id="@+id/thirdOptionButton"
+            android:background="@drawable/circle_map"
+            android:layout_width="88dp"
+            android:layout_height="80dp"
+            style="@style/MainScreenBottomOptions"/>
+
+    </LinearLayout>
+
+</RelativeLayout>
