--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,17 +5,18 @@
               android:layout_height="match_parent">
 
     <Button
-        android:text="@string/order_pod_button_text"
-        android:id="@+id/orderPodButton"
+        android:text="@string/eta_button_text"
+        android:textAllCaps="false"
+        android:layout_weight="3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <include layout="@layout/dialog_payment"/>
-    
-    <ImageView
-        android:id="@+id/qrImage"
-        android:background="@color/colorAccent"
+    <android.support.v7.widget.RecyclerView
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content">
+
+
+    </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
