--- a/app/src/main/res/layout/list_item_options.xml
+++ b/app/src/main/res/layout/list_item_options.xml
@@ -8,7 +8,7 @@
         android:id="@+id/optionText"
         android:gravity="center"
         android:text="test"
-        android:background="@drawable/circle"
+        android:background="@drawable/circle_shape"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
