--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -6,7 +6,7 @@
              android:layout_height="match_parent">
 
     <Button
-        android:background="@drawable/circle_shape"
+        android:background="@drawable/circle_eta"
         android:transitionName="@string/transition_test"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
