--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -5,24 +5,15 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent">
 
-    <Button
-        android:background="@drawable/circle_eta"
-        android:transitionName="@string/transition_test"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <FrameLayout
-        android:id="@+id/frame"
-        android:background="@color/colorAccent"
-        android:layout_margin="@dimen/activity_horizontal_margin"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
     <fragment
-        android:name="com.engr195.spartansuperway.spartansuperway.PaymentFormFragment"
-        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:name="com.engr195.spartansuperway.spartansuperway.PurchaseTicketFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout="@layout/dialog_payment"/>
+        tools:layout="@layout/fragment_purchase_ticket"/>
+
+    <fragment
+        android:id="@+id/ticketFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 </FrameLayout>
