--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,6 +25,14 @@
         <item name="android:gravity">center_horizontal</item>
     </style>
 
+    <style name="BoldTextLabel">
+        <item name="android:textStyle">bold</item>
+    </style>
+    
+    <style name="TicketText">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 
     <style name="PaymentFormEditText" parent="AppTheme">
         <item name="android:background">@color/white</item>
