--- a/app/src/main/res/layout/fragment_ticket.xml
+++ b/app/src/main/res/layout/fragment_ticket.xml
@@ -1,106 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-                                    xmlns:app="http://schemas.android.com/apk/res-auto"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:background="@color/colorNeutral"
+             android:id="@+id/paymentContainer"
+             android:layout_alignParentTop="true"
+             android:layout_width="wrap_content"
+             android:layout_height="match_parent">
 
-    <RelativeLayout
+    <FrameLayout
+        android:id="@+id/square"
         android:background="@color/colorPrimary"
-        android:padding="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:id="@+id/dateAndTime"
-            android:layout_marginBottom="20dp"
+        <RelativeLayout
+            android:padding="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:text="Date:"
-                android:textStyle="bold"
-                android:layout_marginRight="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="@style/TicketText"/>
-
-            <TextView
-                android:text="10/31/2016"
-                android:layout_marginRight="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="@style/TicketText"/>
-
-            <TextView
-                android:text="Time:"
-                android:textStyle="bold"
-                android:layout_marginRight="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="@style/TicketText"/>
-
-            <TextView
-                android:text="12:00PM"
-                android:layout_marginRight="20dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="@style/TicketText"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/leftSide"
-            android:layout_below="@id/dateAndTime"
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:text="From: "
-                android:textStyle="bold"
+            <LinearLayout
+                android:id="@+id/dateAndTime"
                 android:layout_marginBottom="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:text="Date:"
+                    android:textStyle="bold"
+                    android:layout_marginRight="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/TicketText"/>
+
+                <TextView
+                    android:text="10/31/2016"
+                    android:layout_marginRight="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/TicketText"/>
+
+                <TextView
+                    android:text="Time:"
+                    android:textStyle="bold"
+                    android:layout_marginRight="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/TicketText"/>
+
+                <TextView
+                    android:text="12:00PM"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/TicketText"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/leftSide"
+                android:layout_below="@id/dateAndTime"
+                android:orientation="vertical"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:text="From: "
+                    android:textStyle="bold"
+                    android:layout_marginBottom="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/TicketText"/>
+
+                <TextView
+                    android:text="To: "
+                    android:textStyle="bold"
+                    android:layout_marginBottom="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/TicketText"/>
+
+            </LinearLayout>
+
+
+            <TextView
+                android:id="@+id/fromText"
+                android:text="Palo Alto"
+                android:layout_below="@id/dateAndTime"
+                android:layout_marginBottom="20dp"
+                android:layout_alignParentRight="true"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 style="@style/TicketText"/>
 
             <TextView
-                android:text="To: "
-                android:textStyle="bold"
+                android:id="@+id/toText"
+                android:text="San Francisco"
+                android:layout_below="@id/fromText"
                 android:layout_marginBottom="20dp"
-                android:layout_width="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 style="@style/TicketText"/>
 
-        </LinearLayout>
+            <ImageView
+                android:src="@android:drawable/ic_dialog_info"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/toText"
+                android:layout_width="200dp"
+                android:layout_height="200dp"/>
+
+        </RelativeLayout>
+
+    </FrameLayout>
 
 
-        <TextView
-            android:id="@+id/fromText"
-            android:text="Palo Alto"
-            android:layout_below="@id/dateAndTime"
-            android:layout_marginBottom="20dp"
-            android:layout_alignParentRight="true"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            style="@style/TicketText"/>
 
-        <TextView
-            android:id="@+id/toText"
-            android:text="San Francisco"
-            android:layout_below="@id/fromText"
-            android:layout_marginBottom="20dp"
-            android:layout_alignParentRight="true"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            style="@style/TicketText"/>
-
-        <ImageView
-            android:src="@android:drawable/ic_dialog_info"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@id/toText"
-            android:layout_width="200dp"
-            android:layout_height="200dp"/>
-
-    </RelativeLayout>
-
-</android.support.v7.widget.CardView>
+</RelativeLayout>
