--- a/app/src/main/res/layout/fragment_purchase_ticket.xml
+++ b/app/src/main/res/layout/fragment_purchase_ticket.xml
@@ -13,7 +13,9 @@
         android:id="@+id/paymentContainer"
         android:padding="16dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <LinearLayout
             android:id="@+id/leftSide"
