App functional for demo. Updates to callback.

--- a/app/src/main/res/layout/fragment_ticket.xml
+++ b/app/src/main/res/layout/fragment_ticket.xml
@@ -10,7 +10,9 @@
         android:id="@+id/square"
         android:background="@color/colorPrimary"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <RelativeLayout
             android:padding="16dp"
@@ -33,7 +35,7 @@
 
                 <TextView
                     android:id="@+id/ticketDate"
-                    android:text="10/31/2016"
+                    android:text="11/16/2016"
                     android:layout_marginRight="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -49,7 +51,7 @@
 
                 <TextView
                     android:id="@+id/ticketTime"
-                    android:text="12:00PM"
+                    android:text="3:15PM"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="@style/TicketText"/>
