--- a/app/src/main/res/drawable/circle_pod_waiting.xml
+++ b/app/src/main/res/drawable/circle_pod_waiting.xml
@@ -3,7 +3,7 @@
        android:shape="oval">
     <stroke android:color="@color/colorPrimary"
             android:width="10dp"/>
-    <solid android:color="@color/colorPrimaryDark"/>
+    <solid android:color="@android:color/holo_blue_light"/>
     <corners android:radius="5dp"/>
     <size android:width="100dp"
           android:height="100dp"/>
