--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,6 +25,14 @@
         <item name="android:gravity">center_horizontal</item>
     </style>
 
+    <style name="StationButton">
+        <item name="android:background">@drawable/station_button_background</item>
+        <item name="android:layout_margin">16dp</item>
+        <item name="android:textSize">22sp</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
     <style name="BoldTextLabel">
         <item name="android:textStyle">bold</item>
     </style>
